Another possible ios navigation alignment fix

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -70,6 +70,14 @@
         
         background: lawngreen;
         border-radius: 3px;
+        
+        z-index: 1;
+        
+        transform-origin: 4px 0px;
+        
+        /* transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    opacity 0.55s ease; */
     }
 
     .navMobile input:checked ~ nav {
